[metadata]
name = neutron-interconnection
summary = This project implements a Neutron API extension to provide network connectivity between two or more Openstack deployments or regions.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    neutron_interconnection

[entry_points]
oslo.policy.policies =
    neutron-interconnection = neutron_interconnection.policies:list_rules
neutron.policies =
    neutron-interconnection = neutron_interconnection.policies:list_rules
neutron.db.alembic_migrations=
    neutron-interconnection = neutron_interconnection.db.migration:alembic_migrations
oslo.config.opts =
	neutron-interconnection.remote_keystone_auth = neutron_interconnection.opts:list_remote_keystone_auth_opts
	neutron-interconnection.state_scheduler = neutron_interconnection.opts:list_state_scheduler_opts

[compile_catalog]
directory = neutron_interconnection/locale
domain = neutron_interconnection

[update_catalog]
domain = neutron_interconnection
output_dir = neutron_interconnection/locale
input_file = neutron_interconnection/locale/neutron_interconnection.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = neutron_interconnection/locale/neutron_interconnection.pot
